--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -2,6 +2,7 @@ chris:
   name: Chris Example
   email: chris@example.com
   password_digest: <%= User.digest('password') %>
+  admin: true
 
 archer:
   name: Sterling Archer
@@ -18,7 +19,7 @@ malory:
   email: boss@example.gov
   password_digest: <%= User.digest('password') %>
 
-<% 100.times do |n| %>
+<% 30.times do |n| %>
 user_<%= n %>:
   name:  <%= "User #{n}" %>
   email: <%= "user-#{n}@example.com" %>
