--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -17,8 +17,8 @@ lana:
   name: Lana Kane
   email: hands@example.gov
   password_digest: <%= User.digest('password') %>
-  activated: true
-  activated_at: <%= Time.zone.now %>
+  activated: false
+  # activated_at: <%= Time.zone.now %>
 
 malory:
   name: Malory Archer
